--- a/HTML/First/Definition Lists.html
+++ b/HTML/First/Definition Lists.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>First page</title>
+    <title>Second page</title>
     <link href="books.ico" rel="shortcut icon" type="ico">
     <link rel="stylesheet" href="style_page_content.css">
 </head>
