--- a/JavaScript/BootStrap/LectionOne.html
+++ b/JavaScript/BootStrap/LectionOne.html
@@ -5,15 +5,16 @@
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"/>
-
+        <link rel="stylesheet" href="LectionOne-style.css" />
     </head>
 
     <body>
         <div class="container-fluid">
             <div class="row">
-              <div>Column one</div>
-              <div>Column two</div>
-              <div>Column three</div>
+              <div class= "">Column one</div>
+              <div class= "">Column two</div>
+              <div class= "">Column three</div>
+              <div class= "">Column four</div>
             </div>
           </div>
           
