--- a/JavaScript/BootStrap/LectionOne.html
+++ b/JavaScript/BootStrap/LectionOne.html
@@ -11,12 +11,12 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-              <div class= "">Column one</div>
-              <div class= "">Column two</div>
-              <div class= "">Column three</div>
-              <div class= "">Column four</div>
+              <div class= "col-lg-3 col-md-6 clo-sm-12">Column one</div>
+              <div class= "col-lg-3 col-md-6 clo-sm-12">Column two</div>
+              <div class= "col-lg-3 col-md-6 clo-sm-12">Column three</div>
+              <div class= "col-lg-3 col-md-6 clo-sm-12">Column four</div>
             </div>
           </div>
           
     </body>
-</html>
+</html> 
