--- a/JavaScript/BootStrap/LectionOne-GRID-system.html
+++ b/JavaScript/BootStrap/LectionOne-GRID-system.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="LectionOne-style.css" />
     </head>
 
-    <body>
+    <body class="text-center">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-1">1</div>
@@ -34,4 +34,12 @@
           </div>
           
     </body>
+
+    <p class="text-primary">This text is important.</p>
+    <p class="text-success">This text indicates success.</p>
+    <p class="text-muted">This text is muted.</p>
+    <p class="text-info">This text represents some information.</p>
+    <p class="text-warning">This text represents a warning.</p>
+    <p class="text-danger">This text represents danger.</p>
+
 </html> 
